Add group assignment type to pay block and session models; implement paused state for session periods

--- a/main/templates/staff/staff_session/subjects/subjects_card.html
+++ b/main/templates/staff/staff_session/subjects/subjects_card.html
@@ -111,7 +111,9 @@
                                     AZM<br>TDY | YTD
                                 </th>
                                 <th scope="col" class = "text-center m-1 p-1 text-nowrap">
-                                    Block Average<br>AZM
+                                    Block Average AZM <br> 
+                                    [[session.current_parameter_set_period ? session.current_parameter_set_period.parameter_set_pay_block.pay_block_number : '---']] | 
+                                    [[session.current_parameter_set_period && session.current_parameter_set_period.parameter_set_pay_block.pay_block_number > 1 ? session.current_parameter_set_period.parameter_set_pay_block.pay_block_number - 1 : '---']]
                                 </th>
                                 <th scope="col" class = "text-center m-1 p-1 text-nowrap">
                                     Wrist Time<br>TDY
