Add previous block average zone minutes to session player calculations and display

--- a/main/templates/staff/staff_session/subjects/subjects_card.html
+++ b/main/templates/staff/staff_session/subjects/subjects_card.html
@@ -190,7 +190,7 @@
                                     </span>                                    
                                 </td>
                                 <td class="player_table_cell text-nowrap" >
-                                    [[p.todays_average_zone_minutes]]
+                                    [[p.todays_average_zone_minutes]] | [[p.previous_block_average_zone_minutes]]
                                 </td>
                                 <td class="player_table_cell text-nowrap" >
                                     [[p.todays_wrist_minutes]]
