--- a/main/templates/staff/staff_session_parameters/general_settings/general_settings_card.html
+++ b/main/templates/staff/staff_session_parameters/general_settings/general_settings_card.html
@@ -30,6 +30,14 @@
         </div>
         <div class="row">
             <div class="col-7 text-end">
+                {{parameter_set_form.color_assignment_type.label}}:
+            </div>
+            <div class="col text-start">
+                [[session.parameter_set.color_assignment_type]]
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-7 text-end">
                 {{parameter_set_form.enable_chat.label}}:                
             </div>
             <div class="col text-start">
