--- a/main/templates/subject/subject_home/checkin/checkin_card.html
+++ b/main/templates/subject/subject_home/checkin/checkin_card.html
@@ -86,7 +86,9 @@
                 </span>                
             </div>
         </div>   
-        <div class="row" v-if="session.current_parameter_set_period.period_type=='Block Pay Group' || session.current_parameter_set_period.period_type=='Block Pay Individual'">
+        <div class="row" v-if="session.current_parameter_set_period.period_type=='Block Pay Group' || 
+                               session.current_parameter_set_period.period_type=='Block Pay Individual' ||
+                               session.current_parameter_set_period.period_type=='Block Pay Competition'">
             <div class="col text-end pe-1 text-nowrap">
                 Your predicted individual bonus:                 
             </div>
@@ -94,7 +96,8 @@
                 $[[session_player.individual_earnings]]
             </div>
         </div> 
-        <div class="row" v-if="session.current_parameter_set_period.period_type=='Block Pay Group'">
+        <div class="row" v-if="session.current_parameter_set_period.period_type=='Block Pay Group' || 
+                               session.current_parameter_set_period.period_type=='Block Pay Competition'">
             <div class="col text-end pe-1 text-nowrap">
                 Your predicted group bonus:                 
             </div>
