Add 'Show History' feature to ParameterSet and update related templates and models

--- a/main/templates/staff/staff_session_parameters/general_settings/general_settings_card.html
+++ b/main/templates/staff/staff_session_parameters/general_settings/general_settings_card.html
@@ -70,6 +70,14 @@
         </div> 
         <div class="row">
             <div class="col-7 text-end">
+                {{parameter_set_form.show_history.label}}:                
+            </div>
+            <div class="col text-start">
+                <span v-if="session.parameter_set.show_history=='True'">Yes</span><span v-else>No</span>                
+            </div>  
+        </div> 
+        <div class="row">
+            <div class="col-7 text-end">
                 {{parameter_set_form.instruction_set.label}}:                
             </div>
             <div class="col text-start">
