--- a/main/templates/subject/subject_home.html
+++ b/main/templates/subject/subject_home.html
@@ -114,10 +114,15 @@
         </div>
         
         <div class="row justify-content-center mt-3">
-            <div class="col-lg-5" v-cloak v-if="session.enable_chat && !session.is_after_last_period && session.started && !session.is_before_first_period && !session_player.disabled">
-                <div class="row justify-content-center" >
+            <div class="col-lg-5" v-cloak v-if="(session.enable_chat || session.show_history) && !session.is_after_last_period && session.started && !session.is_before_first_period && !session_player.disabled">
+                <div class="row justify-content-center mb-4" v-if="session.enable_chat">
                     <div class="col-lg mb-3 mb-lg-0">
                         {%include "subject/subject_home/chat/chat_card.html"%}   
+                    </div>
+                </div>
+                <div class="row justify-content-center" v-if="session.show_history">
+                    <div class="col-lg">
+                        {%include "subject/subject_home/history/history_card.html"%}   
                     </div>
                 </div>
             </div>
