--- a/main/templates/subject/subject_home/history/history_card.html
+++ b/main/templates/subject/subject_home/history/history_card.html
@@ -16,22 +16,36 @@
                     <table class="table table-condensed"> 
                         <thead>
                             <tr>
-                                <th scope="col" class = "m-1 p-1 text-nowrap">
+                                <th scope="col" class="m-1 p-1 text-nowrap">
                                     Week
                                 </th>
-                                <th scope="col" class = "m-1 p-1 text-nowrap text-center">
+                                <th scope="col" 
+                                    class="m-1 p-1 text-nowrap text-center"
+                                    v-if="show_person_column()">
                                     Person
                                 </th>
-                                <th scope="col" class = "m-1 p-1 text-nowrap text-center">
+                                <th scope="col" 
+                                    class="m-1 p-1 text-center">
+                                    Average Daily<br>Zone Minutes
+                                </th>
+                                <th scope="col" 
+                                    class="m-1 p-1 text-nowrap text-center"
+                                    v-if="show_daily_pay_column()">
                                     Daily Pay
                                 </th>
-                                <th scope="col" class = "m-1 p-1 text-nowrap text-center">
-                                    Invidual Pay
+                                <th scope="col" 
+                                    class="m-1 p-1 text-nowrap text-center"
+                                    v-if="show_individual_pay_column()">
+                                    Individual Pay
                                 </th>                                
-                                <th scope="col" class = "m-1 p-1 text-nowrap text-center">
+                                <th scope="col" 
+                                    class="m-1 p-1 text-nowrap text-center"
+                                    v-if="show_bonus_pay_column()">
                                     Bonus Pay
                                 </th>
-                                <th scope="col" class = "m-1 p-1 text-nowrap text-center">
+                                <th scope="col" 
+                                    class="m-1 p-1 text-nowrap text-center"
+                                    v-if="show_fitbit_percent_column()">
                                     Fitbit Percent
                                 </th>                                                           
                             </tr>
@@ -42,19 +56,30 @@
                                     <td class="player_table_cell text-nowrap text-center">
                                         [[index1+1]]
                                     </td>
-                                    <td class="player_table_cell text-nowrap text-center">
-                                        [[p.id]]
+                                    <td class="player_table_cell text-nowrap text-center"
+                                        v-if="show_person_column()">
+                                        [[p.id == session_player.id ? 'You' : "Other"]]
+                                        {%if session.parameter_set.test_mode%}
+                                        ([[p.id]])
+                                        {%endif%}
                                     </td>
                                     <td class="player_table_cell text-nowrap text-center">
+                                        [[p.average_zone_minutes]]
+                                    </td>
+                                    <td class="player_table_cell text-nowrap text-center"
+                                        v-if="show_daily_pay_column()">
                                         $[[p.earnings.fixed]]
                                     </td>    
-                                    <td class="player_table_cell text-nowrap text-center">
+                                    <td class="player_table_cell text-nowrap text-center"
+                                        v-if="show_individual_pay_column()">
                                         $[[p.earnings.individual]]
                                     </td>                                
-                                    <td class="player_table_cell text-nowrap text-center">
+                                    <td class="player_table_cell text-nowrap text-center"
+                                        v-if="show_bonus_pay_column()">
                                         $[[p.earnings.group_bonus]]
                                     </td>
-                                    <td class="player_table_cell text-nowrap text-center">
+                                    <td class="player_table_cell text-nowrap text-center"
+                                        v-if="show_fitbit_percent_column()">
                                         [[p.earnings.earnings_no_pay_percent]]%
                                     </td>                            
                                 </tr>
