Refactor label_html method to accept display color and id label parameters; update session player logic for dynamic label rendering based on color assignment type. fixes #273.

--- a/main/templates/staff/staff_session_parameters/pay_blocks/pay_blocks_card.html
+++ b/main/templates/staff/staff_session_parameters/pay_blocks/pay_blocks_card.html
@@ -31,7 +31,7 @@
                                     Daily Fitbit Percent Earned
                                 </th>
                                 <th scope="col" class = "text-nowrap">
-                                    Payments for average AZM in block
+                                    Group Assignment Type
                                 </th>                                
                                 <th scope="col" class = "text-nowrap">
                                     Actions
