Add partner string field to ParameterSet model and update form and template for display

--- a/main/templates/staff/staff_session_parameters/general_settings/general_settings_card.html
+++ b/main/templates/staff/staff_session_parameters/general_settings/general_settings_card.html
@@ -62,6 +62,14 @@
         </div>
         <div class="row">
             <div class="col-7 text-end">
+                {{parameter_set_form.partner_string.label}}:                
+            </div>
+            <div class="col text-start">
+                [[session.parameter_set.partner_string]]             
+            </div>  
+        </div>
+        <div class="row">
+            <div class="col-7 text-end">
                 {{parameter_set_form.show_instructions.label}}:                
             </div>
             <div class="col text-start">
