Add partner string handling and update related templates for improved display. fixes #272.

--- a/main/templates/subject/subject_home/checkin/checkin_card.html
+++ b/main/templates/subject/subject_home/checkin/checkin_card.html
@@ -62,7 +62,7 @@
         </div>
         <div class="row" v-if="session.session_players.length>1">
             <div class="col text-end pe-1 text-nowrap">
-                Your partner's average zone minutes:
+                Your [[get_partner_string("lower")]]'s average zone minutes:
             </div>
             <div class="col text-start ps-1">
                 [[session_player.groups_average_zone_minutes]]
