Add pay_block_number field to ParameterSetPayBlockForm and enforce uniqueness validation. fixes #292.

--- a/main/templates/staff/staff_session_parameters/pay_blocks/edit_parameterset_pay_block_modal.html
+++ b/main/templates/staff/staff_session_parameters/pay_blocks/edit_parameterset_pay_block_modal.html
@@ -26,6 +26,14 @@
                         v-bind:disabled="reconnecting || working || session.started">
                     Update <i class="fas fa-sign-in-alt"></i>
                 </button>
+
+                <button class="btn btn-outline-danger"
+                        type="button"
+                        title="Remove Block"
+                        v-bind:disabled="session.started || reconnecting || working"
+                        v-on:click="sendRemoveParameterSetPayBlock(current_parameter_set_pay_block.id)">
+                    Delete <i class="fas fa-minus"></i>
+                </button>
             </div>
         </div>
     </div>
