Add method to calculate current study average zone minutes and update subjects card header for clarity

--- a/main/templates/staff/staff_session/subjects/subjects_card.html
+++ b/main/templates/staff/staff_session/subjects/subjects_card.html
@@ -108,7 +108,7 @@
                                     <span v-else>---</span>
                                 </th>
                                 <th scope="col" class = "text-center m-1 p-1 text-nowrap">
-                                    AZM<br>TDY | YTD
+                                    Zone Min<br>TDY | YTD
                                 </th>
                                 <th scope="col" class = "text-center m-1 p-1 text-nowrap">
                                     Block Average AZM <br> 
