--- a/main/templates/subject/subject_home.html
+++ b/main/templates/subject/subject_home.html
@@ -113,7 +113,7 @@
             </div>
         </div>
         
-        <div class="row justify-content-center mt-3" v-cloak v-show="!session.is_after_last_period && session.started && !session.is_before_first_period && !session_player.disabled">
+        <div class="row justify-content-center mt-3" v-cloak>
             <div class="col-lg-5" v-cloak v-if="(session.enable_chat || session.show_history) && !session.is_after_last_period && session.started && !session.is_before_first_period && !session_player.disabled">
                 <div class="row justify-content-center mb-4" v-if="session.enable_chat">
                     <div class="col-lg mb-3 mb-lg-0">
@@ -128,7 +128,7 @@
             </div>
             <div class="col-lg-7">
                 <!-- notice -->    
-                <div class="row justify-content-center" v-cloak v-if="session.current_parameter_set_period && session.current_parameter_set_period.show_notice">
+                <div class="row justify-content-center" v-cloak v-if="session.current_parameter_set_period && session.current_parameter_set_period.show_notice && !session.is_before_first_period && !session.is_after_last_period">
                     <div class="col-lg mt-lg-0 mb-3">
                         {%include "subject/subject_home/notice/notice_card.html"%}   
                     </div>
