--- a/main/templates/subject/subject_home/chat/chat_card.html
+++ b/main/templates/subject/subject_home/chat/chat_card.html
@@ -25,7 +25,7 @@
                         </div>
 
                         <div v-else class="pe-5 ps-2" v-bind:id="'chat_id_' + c.id">
-                            <span class="fw-bold" v-bind:style="{'color':c.sender_color}">[[c.sender_label]]:</span> [[c.text]]
+                            <span class="fw-bold" v-bind:style="{'color':getColor(findSessionPlayerIndex(c.sender_id))}">[[getColorName(findSessionPlayerIndex(c.sender_id))]]:</span> [[c.text]]
                         </div>
                     </div>
                 </div>        
