Update zone minutes calculation and adjust column titles for clarity.

--- a/main/templates/staff/staff_session/subjects/subjects_card.html
+++ b/main/templates/staff/staff_session/subjects/subjects_card.html
@@ -81,7 +81,7 @@
                                     Name
                                 </th>                                
                                 <th scope="col" class = "text-center m-1 p-1 text-nowrap">
-                                    Group Number
+                                    Group<br>Number
                                 </th>
                                 <th scope="col" class = "text-center m-1 p-1 text-nowrap">
                                     Color
@@ -111,7 +111,7 @@
                                     Zone Min<br>TDY | YTD
                                 </th>
                                 <th scope="col" class = "text-center m-1 p-1 text-nowrap">
-                                    Block Average AZM <br> 
+                                    Block AZM <br> 
                                     [[session.current_parameter_set_period ? session.current_parameter_set_period.parameter_set_pay_block.pay_block_number : '---']] | 
                                     [[session.current_parameter_set_period && session.current_parameter_set_period.parameter_set_pay_block.pay_block_number > 1 ? session.current_parameter_set_period.parameter_set_pay_block.pay_block_number - 1 : '---']]
                                 </th>
