--- a/main/templates/staff/staff_session/subjects/view_subject_modal.html
+++ b/main/templates/staff/staff_session/subjects/view_subject_modal.html
@@ -38,7 +38,7 @@
                                 No Pay %
                             </th>
                             <th scope="col" class = "text-center m-1 p-1 w-auto">
-                                Daily AZM
+                                Daily ZM
                             </th>
                             <th scope="col" class = "text-center m-1 p-1 w-auto">
                                 Average AZM
