Refactor average zone minutes calculation and update column title for clarity. fixes #326.

--- a/main/templates/staff/staff_session/subjects/view_subject_modal.html
+++ b/main/templates/staff/staff_session/subjects/view_subject_modal.html
@@ -41,7 +41,7 @@
                                 Daily ZM
                             </th>
                             <th scope="col" class = "text-center m-1 p-1 w-auto">
-                                Average AZM
+                                Average ZM
                             </th>
                             <th scope="col" class = "text-center m-1 p-1 w-auto">
                                 Min BPM | Expected
